<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/description"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/swLogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/description"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="@+id/bg"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/iama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/swLogo"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:fontFamily="@font/montserrat"/>
    <Button
            android:text="@string/finishBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_weight="1"
                android:textOff="@string/beginner" android:textOn="@string/beginner"
                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
                android:fontFamily="@font/montserrat"
                style="@style/Base.Widget.AppCompat.Button.Borderless" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton" android:layout_weight="1"
                android:textOff="@string/baller" android:textOn="@string/baller"
                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
                android:fontFamily="@font/montserrat"
                style="@style/Base.Widget.AppCompat.Button.Borderless" android:layout_marginStart="16dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>